tdf#92648 fix DOCX import regression (textbox shrinking in footers)

caused by the fix for tdf#91260

Change-Id: I4a5a27b51c4cb1304647b5432c06ca9c5a96590d